--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: Home
     <div class="wrapintro">
         <h1>Merley Neighbourhood Watch</h1>
         <h2>Example message for the home page, this could be anything that you want to highlight about the site.</h2>    
+        <h3>Release 1.0</h3>
     </div>
 </section>
 
