--- a/public/about.html
+++ b/public/about.html
@@ -128,7 +128,12 @@
     <div class="article-post">
     <p>This is a sample website for Merley Neighbourhood Watch</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+<h2 id="mnw-disclaimer">MNW DISCLAIMER</h2>
+
+<p>The Editor and MNW do not recommend or endorse any trader advertising in this Newsletter or by reference elsewhere. It is essential Members ensure any Trader be-ing considered is suitable for their particular needs. We ask Members who do use Traders to provide good/bad feedback to assist other Members. Remember, personal recommendation is always best, so ask friends and neighbours first.</p>
+
+<p>Remember as well, that adverts and their content are paid for by the person placing the advert. MNW reserves the right to withdraw advertising copy without notice. 
+Articles and views or opinions expressed in Newsletters should not be relied upon without first taking appropriate advice from a reliable source.</p>
 
 
     </div>
@@ -148,8 +153,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h3>Some words to put at the end of the pages</h3>
-                    <p>a foot note</p>
+                    <h3>Contact Informaiton</h3>
+                    <p>Our Chairman is Anne Lane Tel: 01202 889 912 e-mail MNW at: admin@merley-homewatch.org.uk 
                 </div>
                 <div class="col-md-4 text-right footersocial">
                     <h5>Connect with Us</h5>
@@ -193,7 +198,7 @@
                 <div class="col-sm-3">
                 <div class="footer-widget textwidget">
                     <h5 class="title">Your Views Count</h5>
-                    <p>Any suggestions of comments, questions or concerns please do contact us 
+                    <p>We try to provide useful information in this Newsletter. If you experience difficulties in some way and it is relevant to others in our Community, do tell us in writing. Describe the problem, what you have done to try to resolve it  
                 </div>
                 </div>
             </div>
