--- a/public/landing_example.html
+++ b/public/landing_example.html
@@ -147,8 +147,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h3>Some words to put at the end of the pages</h3>
-                    <p>a foot note</p>
+                    <h3>Contact Informaiton</h3>
+                    <p>Our Chairman is Anne Lane Tel: 01202 889 912 e-mail MNW at: admin@merley-homewatch.org.uk 
                 </div>
                 <div class="col-md-4 text-right footersocial">
                     <h5>Connect with Us</h5>
@@ -192,7 +192,7 @@
                 <div class="col-sm-3">
                 <div class="footer-widget textwidget">
                     <h5 class="title">Your Views Count</h5>
-                    <p>Any suggestions of comments, questions or concerns please do contact us 
+                    <p>We try to provide useful information in this Newsletter. If you experience difficulties in some way and it is relevant to others in our Community, do tell us in writing. Describe the problem, what you have done to try to resolve it  
                 </div>
                 </div>
             </div>
