--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@ title: Home
 ================================================== -->    
 <section class="intro full-width">
     <div class="wrapintro">
-        <h1>Merley Neighbourhood Watch</h1>
-        <h2>Example message for the home page, this could be anything that you want to highlight about the site.</h2>    
-        <h3>Release 1.0</h3>
+        <h3>Merley Neighbourhood Watch</h3>
+        Welcome to the example Website. 
     </div>
 </section>
 
