--- a/public/committee.html
+++ b/public/committee.html
@@ -213,8 +213,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h3>Contact Informaiton</h3>
-                    <p>Our Chairman is Anne Lane Tel: 01202 889 912 e-mail MNW at: admin@merley-homewatch.org.uk 
+                    <b>Contact Information</b><br>
+                    Our Chairman is Anne Lane <br> Tel: 01202 889 912 or e-mail MNW at: admin@merley-homewatch.org.uk
                 </div>
                 <div class="col-md-4 text-right footersocial">
                     <h5>Connect with Us</h5>
@@ -255,7 +255,7 @@
                 </div>
 
 
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                 <div class="footer-widget textwidget">
                     <h5 class="title">Your Views Count</h5>
                     <p>We try to provide useful information in this Newsletter. If you experience difficulties in some way and it is relevant to others in our Community, do tell us in writing. Describe the problem, what you have done to try to resolve it  
@@ -269,7 +269,8 @@
                 </p>
                 <p class="pull-right">
                 <!-- Please, leave credit to author unless you own a commercial license: https://www.wowthemes.net/freebies-license/ --> 
-                <a target="_blank" href="https://www.wowthemes.net/free-jekyll-template-affiliates/">"Affiliates Theme"</a> - Design & Code by WowThemes.net
+                <a target="_blank" href="https://www.wowthemes.net/free-jekyll-template-affiliates/">"Affiliates Theme"</a> - Design & Code by WowThemes.net <br>
+                <a target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/">"Creative Commons"</a> - Some images licenced by Creative Commons
                 </p>
                 <div class="clearfix"></div>
             </div>
